# ai-image-detector

./: .gitignore  README.md  pyproject.toml
.omx/: metrics.json
.omx/context/: ai-image-detector-20260530T152517Z.md
.omx/logs/: tmux-hook-2026-05-30.jsonl  turns-2026-05-30.jsonl
.omx/plans/: autopilot-impl.md  autopilot-spec.md
.omx/state/: hud-state.json  notify-hook-state.json  tmux-hook-state.json
ai-image-detector/: .gitignore  README.md  pyproject.toml
ai-image-detector/aidetector/: __init__.py  api.py  cli.py  config.py  evaluation.py  model.py
ai-image-detector/benchmarks/: README.md  tiny-genimage-capcheck-40.json
ai-image-detector/tests/: test_cli.py  test_evaluation.py  test_model_utils.py
aidetector/: __init__.py  api.py  cli.py  config.py  evaluation.py  model.py  nonescape_adapter.py  sentry_adapter.py  types.py
benchmarks/: README.md  tiny-genimage-hf-calibrated-200.json  tiny-genimage-hybrid-calibrated-200.json  tiny-genimage-hybrid-multishard-600.json  tiny-genimage-hybrid-multishard-800-grid001.json  tiny-genimage-hybrid-plus-800-f1.json  tiny-genimage-nonescape-mini-800-f1.json  tiny-genimage-sentry-convnext-800-f1.json  tiny-genimage-ultra-800-f1.json  tiny-genimage-univfd-40.json  tiny-genimage-univfd-calibrated-200.json  tiny-genimage-univfd-multishard-400.json  tiny-genimage-univfd-multishard-600.json
tests/: test_cli.py  test_evaluation.py  test_model_utils.py
